2do intento nav

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,11 @@
 .encabezado{
-  min-height: 20em;
+  min-height: 10em !important;
 
 }
 .logo{
   max-height: 8rem;
+}
+
+.btn-encabezado{
+  margin: 0.5rem;
 }
