--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,9 @@ body{
   background-color: #2196f3;
 }
 
+.slogan{
+  font-style: italic !important;
+}
 
 .container {
     background-image: url('../media/blue-landscape.jpg');
