--- a/css/index.css
+++ b/css/index.css
@@ -15,12 +15,12 @@ body{
 }
 
 .columna-encabezado{
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   min-height: 10rem !important;
 }
 
 .columna-subnavbar{
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   min-height: 5rem !important;
 }
 
