Columna social Terminada

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,12 @@
 body{
-  background-color: #2196f3;
+  background: rgba(0,132,227,1);
+background: -moz-linear-gradient(left, rgba(0,132,227,1) 0%, rgba(0,158,237,1) 49%, rgba(0,107,207,1) 79%, rgba(5,80,150,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,132,227,1)), color-stop(49%, rgba(0,158,237,1)), color-stop(79%, rgba(0,107,207,1)), color-stop(100%, rgba(5,80,150,1)));
+background: -webkit-linear-gradient(left, rgba(0,132,227,1) 0%, rgba(0,158,237,1) 49%, rgba(0,107,207,1) 79%, rgba(5,80,150,1) 100%);
+background: -o-linear-gradient(left, rgba(0,132,227,1) 0%, rgba(0,158,237,1) 49%, rgba(0,107,207,1) 79%, rgba(5,80,150,1) 100%);
+background: -ms-linear-gradient(left, rgba(0,132,227,1) 0%, rgba(0,158,237,1) 49%, rgba(0,107,207,1) 79%, rgba(5,80,150,1) 100%);
+background: linear-gradient(to right, rgba(0,132,227,1) 0%, rgba(0,158,237,1) 49%, rgba(0,107,207,1) 79%, rgba(5,80,150,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0084e3', endColorstr='#055096', GradientType=1 );
 }
 
 .slogan{
@@ -25,7 +32,7 @@ body{
 }
 
 .columna-contenido{
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     min-height: 40rem !important;
 }
 
@@ -35,7 +42,7 @@ body{
 }
 
 .columna-social{
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   height: 4rem;
 }
 
