--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0084e3', end
 }
 
 .slogan{
-  font-style: italic !important;
+  font-family: 'Cedarville Cursive', cursive !important;
+  /*font-style: italic !important;*/
 }
 
 .container {
@@ -36,7 +37,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0084e3', end
     min-height: 30rem !important;
 }
 
-.columna-footer{
+.columna-acercade{
   border: 1px solid black;
   min-height: 30rem !important;
 }
@@ -46,34 +47,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0084e3', end
   height: 4rem;
 }
 
-.col1foto{
-  /*border: 1px solid black;
-  height: 19.4rem;*/
-  padding: 0;
-  margin: 0;
+
+.img-publicacion{
+  margin: 6px;
+  border-radius: 10px;
 }
 
-.col2foto{
-  /*border: 1px solid black;
-  height: 39.8rem;*/
+.publicacion{
+  margin: 2px;
+  border-radius: 10px;
 }
-
-.col3-1foto{
-  /*border: 1px solid black;
-  height: 24rem;*/
-}
-
-.col3-2foto{
-  /*border: 1px solid black;
-  height: 14rem;*/
-}
-
-.colentradas{
-  border: 1px solid black;
-  height: 20rem;
-}
-
-.colform{
-  border: 1px solid black;
-  height: 10rem;
+i.icon-white {
+    color: white;
 }
